[package]
name = "steamat"
version = "0.1.0"
edition = "2018"
description = "Gather statistics of steam games from steamcharts in your terminal"
readme = "README.md"
license = "GPL-3.0"
keywords = ["game", "steam", "steam-games", "steamcharts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.5.4"
scraper = "0.12.0"
colored = "2"
clearscreen = "1.0.6"
term-table = "1.3.1"